syntax = "proto3";


package profile;
import "google/api/annotations.proto";

// The greeter service definition.
service Profile{
	// Sends a greeting
	rpc Update(UpdateRequest) returns (UpdateResponse) {
		option (google.api.http) = { post: "/v1/user/profile" };
	}
	rpc Get(GetRequest) returns (GetResponse) {
		option (google.api.http) = { post: "/v1/user/profile/list" };
	}
}
message Request{
	string name = 1;
	string password = 2;
	string verify_code= 3;
}
message Response{
	string name = 1;
	string password = 2;
	string verify_code= 3;
}

message UpdateRequest{
	string name = 1;
	string password = 2;
	string verify_code= 3;
}
message UpdateResponse{
	int32 code = 1;
	string message = 2;
	string token = 3;
}

message GetRequest{
	string name = 1;
	string token = 2;
}
message GetResponse{
	int32 code = 1;
	string message = 2;
}
